--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,18 @@
   "name": "Bhagavad Gita Extension",
   "version": "1.0.0",
   "description": "Get Bhagavad Gita verses daily or on demand.",
+  "icons": {
+    "16": "icons/icon48.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon48.png"
+  },
   "action": {
     "default_popup": "index.html",
-    "default_icon": "icons/icon48.png"
+    "default_icon": {
+      "16": "icons/icon48.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon48.png"
+    }
   },
   "background": {
     "service_worker": "assets/background.js"
