--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Bhagavad Gita Extension",
+  "name": "Bhagavad Gita Insights",
   "version": "1.0.0",
   "description": "Get Bhagavad Gita verses daily or on demand.",
   "icons": {
